pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: echo-pod
  namespace: echo-namespace
  labels:
   appName: echo-pod
spec:
  containers:
    - name: echo-dot
      image: registry.cluster.wik.cloud/public/echo
      ports:
        - containerPort: 3000
