service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-service
  namespace: echo-namespace
spec:
  selector:
    app: echo-app
  ports:
  - port: 3000
    targetPort: 3000
